# bazel-workbench

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
backend/: BUILD.bazel
backend/src/main/scala/vectos/: Main.scala
backend/src/main/scala/vectos/api/: SwaggerRoutes.scala  UserRoutes.scala
backend/src/main/scala/vectos/config/: AppConfig.scala
backend/src/main/scala/vectos/domain/: User.scala
backend/src/main/scala/vectos/repository/: UserRepository.scala
backend/src/main/scala/vectos/security/: PasswordService.scala
backend/src/main/scala/vectos/service/: UserService.scala
backend/src/test/scala/vectos/: ZioSpec.scala
firmware/: BUILD.bazel
firmware/src/: main.rs
toolchains/: BUILD.bazel
