bazel_dep(name = "rules_scala", version = "7.0.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.settings(
    fetch_sources = True,
)
scala_deps.scala()


scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(
    scala_version = "3.7.0",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "dev.zio:zio_3:2.1.18"
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    strict_visibility = True
)

use_repo(maven, "maven")
use_repo(scala_deps, "rules_scala_toolchains")

register_toolchains("//toolchains:custom_scala_toolchain")

