load("@rules_scala//scala:scala.bzl", "scala_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")


scala_binary(
    name = "main",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "vectos.Main",
    deps = [
        artifact("dev.zio:zio_3")
    ],
    visibility = ["//visibility:public"]
)